<resources>
    <string name="app_name">Avt Factory 4.0</string>

    <!--    For toogle button-->
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="welcome_text">AVT MOLD MANAGEMENT APPLICATION</string>
    <string name="action_settings">Settings</string>
    <string name="open_barcode_scanner">Open Barcode Scanner</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_employee_code">Employee Code</string>
    <string name="prompt_password">Password</string>
    <string name="action_signin_byid">Sign in By Id</string>
    <string name="action_signin_byqrscan">Sign in By QR Scan</string>
    <string name="prompt_autofill_empcode">Your Emp Id : 02000</string>
    <string name="prompt_autofill_passcode">Your Password</string>


    <!--    activity_base elements-->
    <string name="app_subtitle_main">System Details</string>
    <string name="action_main_add_supervisor">Supervisor Sign In</string>
    <string name="action_main_add_workstation">Scan WorkStation</string>
    <string name="action_main_add_mold">Scan Mold</string>
    <string name="action_main_add_production_order">Scan Production Order</string>
    <string name="action_main_add_operators">Scan Operators</string>
    <string name="action_main_add_helpers">Scan Helpers</string>
    <string name="action_main_start_production">Start Production</string>


    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
